--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,3 +21,18 @@
              pip install pytest
          - name: Run tests
            run: pytest -v
+       deploy:
+          needs: test      # یعنی فقط بعد از پاس شدن تست اجرا بشه
+          runs-on: ubuntu-latest
+          steps:
+            - name: Deploy to VPS
+              uses: appleboy/ssh-action@v0.1.10
+              with:
+                host: ${{ secrets.SSH_HOST }}
+                username: ${{ secrets.SSH_USER }}
+                key: ${{ secrets.SSH_KEY }}
+                script: |
+                  cd ${{ secrets.PROJECT_PATH }}
+                  git pull origin master
+                  docker compose down
+                  docker compose up -d --build
