--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,42 @@
-   name: CI
+name: CI/CD
 
-   on:
-     push:
-       branches: [ master ]
-     pull_request:
-       branches: [ master ]
+on:
+  push:
+    branches:
+      - master
 
-   jobs:
-     test:
-       runs-on: ubuntu-latest
-       steps:
-         - uses: actions/checkout@v4
-         - name: Set up Python
-           uses: actions/setup-python@v5
-           with:
-             python-version: '3.12'
-         - name: Install dependencies
-           run: |
-             pip install -r requirements.txt
-             pip install pytest
-         - name: Run tests
-           run: pytest -v
-       deploy:
-          needs: test      # یعنی فقط بعد از پاس شدن تست اجرا بشه
-          runs-on: ubuntu-latest
-          steps:
-            - name: Deploy to VPS
-              uses: appleboy/ssh-action@v0.1.10
-              with:
-                host: ${{ secrets.SSH_HOST }}
-                username: ${{ secrets.SSH_USER }}
-                key: ${{ secrets.SSH_KEY }}
-                script: |
-                  cd ${{ secrets.PROJECT_PATH }}
-                  git pull origin master
-                  docker compose down
-                  docker compose up -d --build
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+
+      - name: Run tests
+        run: pytest
+
+  deploy:
+    needs: test     # یعنی فقط اگر تست موفق بود اجرا بشه
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to VPS
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            cd ${{ secrets.PROJECT_PATH }}
+            git pull origin master
+            docker compose down
+            docker compose up -d --build
+
